tests/security/taintedHeader/output.txt
ERROR: TaintedData - input.hack:8:10 - Detected a redirect URI